syntax = "proto3";
package ab_grpc;
option go_package = "./;grpcpb";

service anti_bruteforce {
  // Search returns a Google search result for the query.
  rpc AccessRequest(Request) returns (Result) {
  }
  rpc clearBucket(Request) returns (Result) {
  }
  rpc AddToWhileList(SubNet) returns (Result) {
  }
  rpc DelFromWhileList(SubNet) returns (Result) {
  }
  rpc AddToBlackList(SubNet) returns (Result) {
  }
  rpc DelFromBlackList(SubNet) returns (Result) {
  }
}

enum Status {
  STATUS_UNSPECIFIED = 0;
  STATUS_TRUE = 1;
  STATUS_FALSE = 2;
  STATUS_ERROR = 3;
}

message Request {
  string login = 1;
  string pass = 2;
  string ip = 3;
}

message SubNet {
  string subnet = 1;
}

message Result {
  Status status = 1;
}